<resources>
    <string name="app_name">씨네마천국</string>
    <string name="movie_synopsis_text">군도, 백성을 구하라!\n양반과 탐관오리들의 착취가 극에 달했던 조선 철종 13년.힘 없는 백성의 편이 되어세상을 바로잡고자 하는 의적떼인 군도(群盜),지리산 추설이 있었다.\n\n쌍칼 도치 vs 백성의 적 조윤\n잦은 자연재해, 기근과 관의 횡포까지 겹쳐 백성들의 삶이 날로 피폐해 져 가는 사이,나주 대부호의 서자로 조선 최고의 무관 출신인 조윤은 극악한 수법으로 양민들을 수탈,삼남지방 최고의 대부호로 성장한다. 한편 소, 돼지를 잡아 근근이 살아가던 천한 백정 돌무치는죽어도 잊지 못할 끔찍한 일을 당한 뒤 군도에 합류. 지리산 추설의 신 거성(新 巨星) 도치로 거듭난다.\n\n뭉치면 백성, 흩어지면 도적!\n망할 세상을 뒤집기 위해, 백성이 주인인 새 세상을 향해 도치를 필두로 한 군도는 백성의 적,조윤과 한 판 승부를 시작하는데...</string>
    <string name="movie_title_text">군도</string>
    <string name="movie_date_type">2014.07.23개봉\n액션/137분</string>
    <string name="reservation_rate">예매율</string>
    <string name="reservation_rating_percent">5위 1.8%</string>
    <string name="rate_text">평점</string>
    <string name="accumulate_audience">누적관객수</string>
    <string name="accumulate_audience_num">839,399명</string>
    <string name="movie_synopsis">줄거리</string>
    <string name="director_appearance">감독/출연</string>
    <string name="director">감독</string>
    <string name="director_name">윤종빈</string>
    <string name="appearance">출연</string>
    <string name="appearance_name">하정우(도치), 강동원(조윤)</string>
    <string name="one_line_comment">한줄평</string>
    <string name="one_line_write">작성하기</string>
    <string name="all_see">모두 보기</string>
    <string name="reservation">예매하기</string>
</resources>
