<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_gradation"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_detail_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/large_padding"
                android:src="@drawable/image11" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_title_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="@dimen/huge_margin"
                    style="@style/Text.BoldWhiteLarge"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:src="@drawable/ic_15"
                    app:layout_constraintLeft_toRightOf="@id/movie_title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="@dimen/huge_margin"/>

                <TextView
                    android:id="@+id/movie_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_date_type"
                    app:layout_constraintTop_toBottomOf="@id/movie_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    style="@style/Text.WhiteNormal"/>

                <Button
                    android:id="@+id/thumb_up"
                    android:layout_width="@dimen/thumb_image_size"
                    android:layout_height="@dimen/thumb_image_size"
                    android:background="@drawable/ic_thumb_up"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:id="@+id/thumb_up_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:text="@integer/thumb_up"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/thumb_up"
                    style="@style/Text.WhiteNormal"/>

                <Button
                    android:id="@+id/thumb_down"
                    android:layout_width="@dimen/thumb_image_size"
                    android:layout_height="@dimen/thumb_image_size"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:background="@drawable/ic_thumb_down"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/thumb_up_textView"/>

                <TextView
                    android:id="@+id/thumb_down_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@integer/thumb_down"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/thumb_down"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_marginStart="@dimen/small_margin"
                    style="@style/Text.WhiteNormal" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/rating_layout_height"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/right_bolder_grey"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reservation_rate"
                    android:textSize="@dimen/large_text" />

                <TextView
                    android:id="@+id/movie_reservation_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reservation_rating_percent"
                    android:textSize="@dimen/normal_text"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/right_bolder_grey"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_text"
                    android:textSize="@dimen/large_text" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RatingBar
                        style="?android:ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:rating="4.1"
                        android:stepSize="0.1" />

                    <TextView
                        android:id="@+id/movie_audience_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/small_margin"
                        android:text="8.2"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accumulate_audience"
                    android:textSize="@dimen/large_text" />

                <TextView
                    android:id="@+id/movie_auudience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accumulate_audience_num"
                    android:textSize="@dimen/small_text"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:background="@android:color/background_light"
            android:orientation="vertical"
            android:paddingLeft="@dimen/small_padding"
            android:paddingRight="@dimen/small_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/small_padding"
                android:paddingTop="@dimen/small_padding"
                android:text="@string/movie_synopsis"
                android:textColor="@android:color/black"
                android:textSize="@dimen/large_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/xlarge_margin"
                android:lineSpacingExtra="4sp"
                android:text="@string/movie_synopsis_text"
                android:textStyle="bold"
                android:textSize="@dimen/normal_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/small_padding"
            android:layout_marginBottom="@dimen/small_margin"
            android:background="@android:color/background_light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/director_appearance"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/large_text"
                android:layout_marginBottom="@dimen/small_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/small_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/director"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/large_text"/>

                <TextView
                    android:id="@+id/movie_director"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:text="@string/director_name"
                    android:textSize="@dimen/large_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appearance"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/large_text"/>
                <TextView
                    android:id="@+id/movie_actor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/normal_margin"
                    android:text="@string/appearance_name"
                    android:textSize="@dimen/large_text" />
            </LinearLayout>
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:background="@android:color/background_light"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_marginTop="@dimen/xlarge_margin"
                android:text="@string/one_line_comment"
                android:textColor="@android:color/black"
                android:textSize="@dimen/large_text"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>



            <TextView
                android:id="@+id/writeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xlarge_margin"
                android:layout_marginRight="@dimen/xlarge_margin"
                android:background="@android:color/background_light"
                android:drawableLeft="@drawable/ic_review_selected"
                android:text="@string/one_line_write"
                android:textColor="@color/orange"
                android:textSize="@dimen/large_text"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/all_see_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                android:background="@drawable/linear_boarder_purple"
                android:text="@string/all_see"
                android:textColor="@color/purple"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@android:color/background_light"
            android:layout_margin="@dimen/normal_margin"
            android:padding="@dimen/normal_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:src="@drawable/ic_kakao" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin"
                android:background="@color/reservation_orange"
                android:text="@string/reservation"
                android:textSize="@dimen/large_text"
                android:textStyle="bold"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>